--- a/files/新增收货地址/styles.css
+++ b/files/新增收货地址/styles.css
@@ -405,7 +405,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -421,7 +421,7 @@
   width:390px;
   height:50px;
   display:flex;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -688,7 +688,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -704,7 +704,7 @@
   width:390px;
   height:50px;
   display:flex;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -971,7 +971,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -987,7 +987,7 @@
   width:390px;
   height:50px;
   display:flex;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -1254,7 +1254,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -1270,7 +1270,7 @@
   width:390px;
   height:50px;
   display:flex;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -1537,7 +1537,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
@@ -1553,7 +1553,7 @@
   width:390px;
   height:50px;
   display:flex;
-  font-family:'FontAwesome', sans-serif;
+  font-family:"FontAwesome", sans-serif;
   font-weight:400;
   font-style:normal;
   font-size:16px;
