--- a/files/结算页/styles.css
+++ b/files/结算页/styles.css
@@ -2223,7 +2223,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -2235,7 +2235,7 @@
   width:390px;
   height:305px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -2274,7 +2274,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2287,7 +2287,7 @@
   width:390px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2324,7 +2324,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2338,7 +2338,7 @@
   width:104px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2371,7 +2371,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2404,7 +2404,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2417,7 +2417,7 @@
   width:130px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2454,7 +2454,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2468,7 +2468,7 @@
   width:104px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2501,7 +2501,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2534,7 +2534,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2547,7 +2547,7 @@
   width:130px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2584,7 +2584,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2597,7 +2597,7 @@
   width:130px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2637,7 +2637,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2650,7 +2650,7 @@
   width:390px;
   height:35px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2704,7 +2704,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -2716,7 +2716,7 @@
   width:375px;
   height:305px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -2755,7 +2755,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2768,7 +2768,7 @@
   width:375px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -2805,7 +2805,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2819,7 +2819,7 @@
   width:100px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2852,7 +2852,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2885,7 +2885,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2898,7 +2898,7 @@
   width:188px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -2935,7 +2935,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2949,7 +2949,7 @@
   width:100px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -2982,7 +2982,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3015,7 +3015,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3028,7 +3028,7 @@
   width:188px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3068,7 +3068,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3081,7 +3081,7 @@
   width:375px;
   height:35px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3135,7 +3135,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -3147,7 +3147,7 @@
   width:375px;
   height:305px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
 }
@@ -3186,7 +3186,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3199,7 +3199,7 @@
   width:375px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3236,7 +3236,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3250,7 +3250,7 @@
   width:100px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3283,7 +3283,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3316,7 +3316,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3329,7 +3329,7 @@
   width:78px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3366,7 +3366,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3380,7 +3380,7 @@
   width:100px;
   height:45px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3413,7 +3413,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   color:#1ABC9C;
@@ -3446,7 +3446,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3459,7 +3459,7 @@
   width:78px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3499,7 +3499,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3512,7 +3512,7 @@
   width:375px;
   height:35px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:20px;
@@ -3550,7 +3550,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3563,7 +3563,7 @@
   width:83px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3600,7 +3600,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3613,7 +3613,7 @@
   width:69px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3650,7 +3650,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
@@ -3663,7 +3663,7 @@
   width:69px;
   height:260px;
   display:flex;
-  font-family:'微软雅黑', sans-serif;
+  font-family:"微软雅黑", sans-serif;
   font-weight:400;
   font-style:normal;
   line-height:36px;
